testdata/baselines/reference/submodule/compiler/circularConstraintYieldsAppropriateError.errors.txt
circularConstraintYieldsAppropriateError.ts(10,7): error TS2310: Type 'Foo' recursively references itself as a base type.
circularConstraintYieldsAppropriateError.ts(17,5): error TS2339: Property 'bar' does not exist on type 'Foo'.


==== circularConstraintYieldsAppropriateError.ts (2 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/16861
    class BaseType<T> {
        bar: T
    }
    
    class NextType<C extends { someProp: any }, T = C['someProp']> extends BaseType<T> {
        baz: string;
    }
    
    class Foo extends NextType<Foo> {
          ~~~
!!! error TS2310: Type 'Foo' recursively references itself as a base type.
        someProp: {
            test: true
        }
    }
    
    const foo = new Foo();
    foo.bar.test
        ~~~
!!! error TS2339: Property 'bar' does not exist on type 'Foo'.